<resources>
    <string name="app_name">Food Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food Store</string>
    <string name="nav_header_subtitle">foodstore.food@gmail.com</string>
    <string name="nav_header_desc">Header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_new_products">New Products</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_carts">Carts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="my_carts">My Carts</string>
    <string name="my_orders">My Orders</string>
    <string name="new_products">New Products</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="search_your_item_here">Search Your Item Here…</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended">Recommended</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="price">Price $</string>
    <string name="_30">30</string>
    <string name="_5_0">5.0</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="description_is_here">description is here...</string>
    <string name="buy_now">Buy Now</string>
    <string name="logout">Logout</string>
    <string name="about_us">At Food Store, we\'re all about making your life easier and tastier!\n\nWe offer a one-stop shop for all your grocery needs. Whether you\'re looking for fresh fruits and vegetables to fuel your body, delicious eggs for breakfast, or a quick fast food fix, we\'ve got you covered. We even have a selection of fresh fish for those who love healthy and flavorful seafood.\n\nOur focus is on providing quality and convenience. We source our products carefully to ensure they\'re fresh and meet your standards. Plus, with options like fast food alongside fresh produce, you can grab a healthy meal or a quick snack, all in one place.\n\nOur friendly staff is here to help. They\'re happy to answer any questions you have and assist you in finding exactly what you need.\n\nCome visit Food Store today and experience a convenient and satisfying shopping experience!</string>
    <string name="contact_us">Contact Us</string>
</resources>